Updated with tasks to ensure graal.js has compiler binaries and modules.